# acdc-daq-revc

./: .gitignore  .metadata.cpp.swp  ACC_Settings  BufferClear.sh  CLEANUP.sh  CMakeLists.txt  Command  Command Interface Specification for the ACC.docx  ConnectedBoards  ConnectionSettings  INSTALL.sh  README.md  SpeedTest  Test  TestConnection  acdc-corrupt-buffer.txt  acdc-corrupt-psec-buffer.txt  acdc_buffer.txt  directorypedtag_board0.txt  out_revc  output.txt  test.yaml  udp_send.cpp
Plotting/environment/: Main.py  README.md
Results/: Data_b0_evno0.txt  testfile.txt  testfile2.txt  testfile3.txt
analysis/: PSEC_analysis.py  Untitled.ipynb  Untitled1.ipynb  averaging.py  oscope.py
autogenerated_calibrations/: PEDS_ACDC_board0.txt
config/: .lab6.yml.swp  calibration.yml  coinc.yml  defatults.yml  example.yml  external_trig_planacon.yml  falling_pulse_self_trigger.yml  lab6.yml  lab6.yml~  lappd.yml  rising_pulse.yml  scope_input.yml  test.yml  trig_mask_helper.py
include/: ACC.h  ACC_ETH.h  ACC_USB.h  ACDC.h  CommandLibrary.h  Config.h  DataParser.h  Ethernet.h  EthernetInterface.h  Metadata.h  Scope.h  stdUSB.h
lib/: .Metadata.cpp.swo  ACC.cpp  ACC_ETH.cpp  ACC_USB.cpp  ACDC.cpp  Config.cpp  DataParser.cpp  Ethernet.cpp  EthernetInterface.cpp  Metadata.cpp  Scope.cpp  stdUSB.cpp
oscilloscope/: liveplot.gnu  liveplot2.gnu  liveplot_b2.gnu  settings.gnu  settings_raw.gnu
src/: Command.cpp  Command_ETH.cpp  Command_USB.cpp  ConnectedBoards.cpp  DataCalibToConfig.cpp  MUXPPS.cpp  PPS.cpp  SpeedTest.cpp  Test.cpp  TestConnection.cpp  alignLVDS.cpp  basicDAQ.cpp  calEnable.cpp  calibrateADC.cpp  calibratePed.cpp  configurePLL.cpp  connectedBoards.cpp  debug.cpp  listenForData.cpp  logData.cpp  logDataFTBF.cpp  onlyListen.cpp  onlySetup.cpp  oscope.cpp  oscope_py.cpp  printAcdcMetadata.cpp  readACDC.cpp  readCalibModeData.cpp  reset.cpp  scanLinkPhase.cpp  setConfig.cpp  setLed.cpp  setPed.cpp  testFunction.cpp  updateLinkStatus.cpp  validation_test.cpp
